--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,63 @@
 * {
-    padding: 0;
+    padding: 0px;
     margin: 0;
     box-sizing: border-box;
+}
+
+:root {
+    --backgroundColor: #3CDBC0;
+    --mainText: #4a4a4a;
 }
 
 body {
     font-family: 'Rubik', sans-serif;
 }
 
+.header {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo{
+    padding: 10px 0 0;
+}
+
+    .logo img{
+        width: 155px;
+    }
+
+.nav {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    padding: 10px 0 13px;
+}
+
+    .nav a {
+        padding: 0 10px;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: var(--mainText);
+    }
+
+.container {
+    height: 100vh;
+    background-color: var(--backgroundColor);
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+    .container h1{
+        font-size: 30px;
+        width: 155px;
+    }
