--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
     padding: 0px;
     margin: 0;
     box-sizing: border-box;
+    
 }
 
 :root {
@@ -22,30 +23,28 @@ body {
     align-items: center;
 }
 
-.logo{
-    padding: 10px 0 0;
-}
-
-    .logo img{
-        width: 155px;
+    .logo{
+        padding: 10px 0 0;
     }
 
-.nav {
-    width: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    padding: 10px 0 13px;
-}
+        .logo img{
+            width: 155px;
+        }
 
-    .nav a {
-        padding: 0 10px;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: var(--mainText);
+    .nav {
+        width: 100%;
+        background-color: white;
+        text-align: center;
+        font-size: 16px;
+        padding: 10px 0 13px;
     }
+
+        .nav a {
+            padding: 0 10px;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: var(--mainText);
+        }
 
 .container {
     height: 100vh;
@@ -61,3 +60,4 @@ body {
         font-size: 30px;
         width: 155px;
     }
+
