--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,8 @@ body {
 }
 
 .header {
+    top: 0;
+    position: fixed;
     width: 100%;
     background-color: white;
     display: flex;
@@ -61,3 +63,17 @@ body {
         width: 155px;
     }
 
+    @media all and (min-width: 768px) {
+        .logo{
+            padding: 20px 0 20px 30px;
+        }
+        
+        .header {
+            flex-direction: row;     
+        }
+
+        .container h1 {
+            font-size: 40px;
+            width: 300px;
+        }
+    }
