--- a/styles/style.css
+++ b/styles/style.css
@@ -17,31 +17,28 @@ body {
 .header {
     top: 0;
     position: fixed;
-    width: 100%;
-    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    width: 100%;
 }
 
-    .logo{
+    .logo {
+        width: 155px;
         padding: 10px 0 0;
     }
 
-        .logo img{
-            width: 155px;
-        }
-
     .nav {
-        width: 100%;
-        background-color: white;
+        display: flex;
         text-align: center;
         font-size: 16px;
         padding: 10px 0 13px;
+        list-style-type: none;
     }
 
-        .nav a {
+        .menu-link {
             padding: 0 10px;
             text-decoration: none;
             text-transform: uppercase;
@@ -58,27 +55,28 @@ body {
     justify-content: center;
     align-items: center;
 }
-    .container h1{
+    .title {
         font-size: 30px;
         width: 155px;
+        text-transform: capitalize;
     }
 
 @media all and (min-width: 768px) {
-    .logo{
+    .header{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
         padding: 20px 0 20px 30px;
     }
-    
-    .header {
-        flex-direction: row;   
-    }
-
-    .nav {
-        text-align: right;
-        padding-right: 30px;
-    }
-
-    .container h1 {
+    .title {
         font-size: 40px;
         width: 300px;
     }
+    .logo {
+        padding: 0;
+    }
+    .nav {
+        padding-right: 30px;
+    }
+
 }
